appservices/domain/multiversion/echo/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo
    version: v1
  name: echo-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
      version: v1
  template:
    metadata:
      labels:
        app: echo
        version: v1
    spec:
      containers:
      - image: riveryc/app:v0.0.1
        name: echo
        ports:
        - containerPort: 8000
