appservices/domain/multiversion/echo/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: echo
spec:
  host: echo
  # trafficPolicy:
  #   tls:
  #     mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  # - name: v2
  #   labels:
  #     version: v2
